# fastapi-admin

./: pyproject.toml
